--- a/templates/app/manage_store.html
+++ b/templates/app/manage_store.html
@@ -268,7 +268,7 @@
     display:none;
 ">
   <!-- Logo -->
-  <img src="/static/images/logo.jpg" alt="Logo" style="width:80px;height:auto;margin-bottom:20px;">
+  <img src="/static/images/logo-bg.png" alt="Logo" style="width:80px;height:auto;margin-bottom:20px;">
 
   <!-- Spinner -->
   <div class="spinner-border text-success" role="status" style="width:4rem;height:4rem;">
