--- a/templates/app/manage_store.html
+++ b/templates/app/manage_store.html
@@ -275,7 +275,7 @@
     <span class="visually-hidden">Loading...</span>
   </div>
 
-  <p class="mt-3 fw-bold text-success">Preparing your product details… This may take up to 1 minute. Please hold on</p>
+  <p class="mt-3 fw-bold text-success"> <br>Preparing your product details…<br> This may take up to 1 minute depending on size<br> and length of images and videos.<br> Please hold on</p>
 </div>
 
 <!-- Lightbox2 JS -->
