--- a/templates/register.html
+++ b/templates/register.html
@@ -7,14 +7,29 @@
 <form action="{% url 'register' %}" method="post" class="form">
     {% csrf_token %}
     <h1>Register</h1>
+
     <div class="form-row">
         <div class="form-col">
             {{ form.username.label_tag }}
             {{ form.username }}
+            {% if form.username.errors %}
+                <div class="text-danger">
+                    {% for error in form.username.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
         </div>
         <div class="form-col">
             {{ form.email.label_tag }}
             {{ form.email }}
+            {% if form.email.errors %}
+                <div class="text-danger">
+                    {% for error in form.email.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
         </div>
     </div>
 
@@ -22,12 +37,27 @@
         <div class="form-col">
             {{ form.password1.label_tag }}
             {{ form.password1 }}
+            {% if form.password1.errors %}
+                <div class="text-danger">
+                    {% for error in form.password1.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
         </div>
         <div class="form-col">
             {{ form.password2.label_tag }}
             {{ form.password2 }}
+            {% if form.password2.errors %}
+                <div class="text-danger">
+                    {% for error in form.password2.errors %}
+                        <p>{{ error }}</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
         </div>
     </div>
+
     <button type="submit">REGISTER</button>
     <p><a href="{% url 'login' %}">Already have an account?</a></p>
 </form>
