--- a/templates/app/manage_store.html
+++ b/templates/app/manage_store.html
@@ -175,7 +175,7 @@
     {% endif %}
 
     <button type="submit" class="btn btn-success mt-3">
-      {% if form.instance.pk %}Save Changes{% else %}Add Product + Images + Videos{% endif %}
+      {% if form.instance.pk %}Save Changes{% else %}FINISH   {% endif %}
     </button>
   </form>
 
